--- a/recipe.html
+++ b/recipe.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Creamy Baked Macaroni and Cheese</title>
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
  <article>
@@ -20,7 +22,7 @@
       <dd>4 out of 5</dd>
     </dl>
   </header>
-  <figure>
+  <figure id="main-recipe-photo">
     <img src="nyt_mac_cheese.jpg" alt="Creamy Baked Mac and Cheese image">
     <figcaption>Christopher Testani for The New York Times. Food Stylist: Barrett Washburne.</figcaption>
   </figure>
@@ -56,7 +58,7 @@
     </ol>
   </section>
 
-  <section>
+  <section id="nutrition">
     <h3>Nutritional Information</h3>
     <ul>
       <li>955 calories</li>
@@ -71,7 +73,7 @@
       <li>1311 milligrams sodium</li>
     </ul>
   </section>
-  <footer class="p">A class project by Miranda Cazares</footer>
+  <footer><p>A class project by Miranda Cazares</p></footer>
 </article>
 </body>
 </html>
